# GitStory

./: .gitignore  LICENSE  README.md  RULES.md  SOUL.md  agent.yaml  bandit.yaml  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_evaluation.py
.github/workflows/: ci.yml
analysis/: __init__.py  calibration.py  distribution.py
config/: baseline_metrics.json  calibrated_thresholds.json
core/: __init__.py  git_parser.py  models.py  pattern_detector.py
data/labeled/: label_schema.json  sample_labeled_data.json
evaluation/: __init__.py  evaluator.py  optimize_thresholds.py  regression_guard.py  run_evaluation.py
examples/: check.txt  demo_linux_kernel.md  sample_output.md  self_analysis.md
skills/: __init__.py
skills/deep_history_analysis/: SKILL.md  __init__.py  deep_history_analysis.py
skills/intent_inference/: SKILL.md  __init__.py  intent_inference.py
skills/narrative_engine/: SKILL.md  __init__.py  narrative_engine.py
skills/risk_detection/: SKILL.md  __init__.py  risk_detection.py
skills/transition_analysis/: SKILL.md  __init__.py  (+1 more)
tests/: conftest.py  golden.py  run_all_tests.py  run_temporal_adversarial_pack.py  test_calibration.py  test_deep_history_analysis.py  test_distribution.py  test_evaluation.py  test_git_parser.py  test_golden_outputs.py  test_integration.py  test_intent_inference.py  test_main.py  test_models.py  test_narrative_engine.py  test_pattern_detector.py  test_risk_detection.py  test_robustness.py  test_schema_validation.py  test_transition_analysis.py  test_visual_timeline.py
(+57 files in other folders)
